# ROS2

./: README.md
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery_client.cpp  hw_status_publisher.cpp  led_panel_server.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  ros2cppTemplate.cpp  temp.cpp
my_cpp_pkg/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: number_app.launch.py  robot_app.launch.py  robot_app_alt.launch.py  turtle_catcher.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: Turtle.msg  TurtleArray.msg
my_robot_interfaces/srv/: CatchTurtle.srv  ComputeRectangleArea.srv  SetLed.srv
